Edit Readme && background 🏔🏔

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Original Flappy Bird -JavaSCript</title>
+    <title>Flappy Bird</title>
+    <link
+      rel="icon"
+      href="https://toppng.com/uploads/preview/colors-download-settings-flappy-bird-bird-11562999909gni9kwqefo.png"
+    />
     <link
       href="https://fonts.googleapis.com/css?family=Teko:700"
       rel="stylesheet"
@@ -14,6 +18,9 @@
         border: 1px solid #000;
         display: block;
         margin: 0 auto;
+      }
+      body {
+        background-color: #272b30;
       }
     </style>
   </head>
